# ChangeLog for app-antivirus/clamd-stream-client
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Nov 2009; Marcin Miroslaw <bug@mejor.pl>
  +clamd-stream-client-1.3.ebuild, +metadata.xml:
  Initial commit, bug #278657.
