@@ -1,4 +1,4 @@
 DIST clamd-stream-client-1.3.tar.gz 39013 RMD160 234e690e6a5de443e84265316e18f27bc86b03f4 SHA1 54b4639fc2f51c062d3bdffb83d91a3ece97b861 SHA256 3ca4125eb69544efa77d6976b57ed4a22d3ca23eee1f91805bc0fa2319f8b753
-EBUILD clamd-stream-client-1.3.ebuild 487 RMD160 879f0154ec0ccecb213aa980938079f0fd90791d SHA1 86c8d08bb57b3cbeeff9e886b503daeee1a49cbf SHA256 84d954503becc1464e530f96d51eb7f6976e3c31f041606e1495268583457b71
-MISC ChangeLog 262 RMD160 138c1e5012385327100ef92a17bcda2ea289e691 SHA1 cea0bb44782f2e090d1ae5be50ba5a2c1f926865 SHA256 2ada69bd2dc35cdf4a069434bba68d61a3ee1da30f8f242258ddb955193197cb
+EBUILD clamd-stream-client-1.3.ebuild 472 RMD160 d73dbe8051e910d4d21165b1534a3ce66d3d30ef SHA1 9f1dc338ab4f30d83cbb40ee43ce9dcdb5b0024f SHA256 eab5ed46ca9b894fc17a5b23468f00929c48db5abe991405224a8e6f35e63481
+MISC ChangeLog 396 RMD160 12845a7ac39dd3e58a722a7a9723897067a147a8 SHA1 76099528426f7e68bfdbae57740458390d4e1d42 SHA256 99df2a3a0bd275804736e70982295683151d1d57e6929dc8228f405f5ccac590
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
