@@ -3,6 +3,10 @@
 # $Header: $
 
   23 Nov 2009; Marcin Miroslaw <bug@mejor.pl>
+  clamd-stream-client-1.3.ebuild:
+  Fixes to keep ebuild according to coding standards
+
+  23 Nov 2009; Marcin Miroslaw <bug@mejor.pl>
   +clamd-stream-client-1.3.ebuild, +metadata.xml:
   Initial commit, bug #278657.
 
